--- a/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/delete-currency-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/delete-currency-confirm.html
@@ -1,21 +1,14 @@
-{% extends 'allifmaalcommonapp/base/uimainbase/allifmaaluibase.html'%}
-{% load humanize %}
-{% block title %}
-{{title}}
-{% endblock %}
-{% block style %}
+{% extends 'allifmaalcommonapp/ui/general/delete-confirm.html'%}
+{% block delete-actions %}
+ <tr>
+    <td class="allif-fix-table-col">Edit {{allifquery}}</td>
+    <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">No, Dont Delete {{allifquery}}</a></td>
+  </tr>
+
+  <tr>
+    <td class="allif-fix-table-col">Delet {{allifquery}}</td>
+    <td><a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonDeleteCurrency' allifquery.id user_var glblslug %}"> Yes, Delete {{allifquery}}</a></td>
+  </tr>
 {%endblock%}
-{% block body %}
-    {% include 'allifmaalcommonapp/includes/delete/delete-confirm-upper-section.html' %}
-      <tr>
-        <td class="allif-fix-table-col">Edit {{allifquery}}</td>
-        <td><a class="amel-table-list-identifier" href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">No, Dont Delete {{allifquery}}</a></td>
-      </tr>
-     <tr>
-        <td class="allif-fix-table-col">Delet {{allifquery}}</td>
-        <td><a class="amel-table-list-identifier body-delete-link" href="{% url 'allifmaalcommonapp:commonDeleteCurrency' allifquery.id user_var glblslug %}"> Yes, Delete {{allifquery}}</a></td>
-      </tr>
-    {% include 'allifmaalcommonapp/includes/delete/delete-confirm-lower-section.html' %}
-{% block scripts %}
-  {% endblock %}
-   {% endblock %}
+     
+   
