--- a/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currencies.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/currencies/currencies.html
@@ -1,50 +1,26 @@
-{% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
-  {% block allif-basic-search %}
-  <li><a class="dropdown-item">Looking for something?</a></li>
-  <form method='POST' action="{% url 'allifmaalcommonapp:commonCurrencySearch' user_var glblslug %}">{% csrf_token %}  
-  <input type="text" id="allifsearchcommonfield" name="allifsearchcommonfieldname" class="form-control allifsearchcommonfieldclasstwo"
-    placeholder="Type Here ...">
-    <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-    </form>
-    <hr>
+  {% extends 'allifmaalcommonapp/ui/tables/full/data-list.html'%}
+  {% block allif-basic-search-action %}
+    {% url 'allifmaalcommonapp:commonCurrencySearch' user_var glblslug %}
   {% endblock %}
- {% block upload-excel-file %}
-  <div class="allif-main-excel-upload-wrapper">
-  <li><a class="dropdown-item">Upload Excel File</a></li>
-  <form method="POST" action="{% url 'allifmaalcommonapp:commonUploadExcel' 'CommonCurrenciesModel' user_var glblslug %}" enctype="multipart/form-data">
-      {% csrf_token %}
-      <input type="file" name="excel_file" accept=".xlsx, .xls" class="form-control" required>
-      <button type="submit" class="btn allifmaal-submit-btn">Upload Excel</button>
-  </form>
-    </div>
-    {% endblock %}
-
-  {% block advanced-search %}
-  <li><a class="dropdown-item">Advanced Searching</a></li>
-  <form method='POST' action="{% url 'allifmaalcommonapp:commonCurrencyAdvanceSearch' user_var glblslug %}" enctype="multipart/form-data">{% csrf_token %}
-    {% include 'allifmaalcommonapp/includes/forms/advanced-search-form.html' %}
-        <button type="submit" class="btn allifmaal-submit-btn">Submit</button>
-    </form>
+  {% block upload-excel-file-action %}
+    {% url 'allifmaalcommonapp:commonUploadExcel' 'CommonCurrenciesModel' user_var glblslug %}
   {% endblock %}
-    
- {% block allif-header-links %}
-<a href="{% url 'allifmaalcommonapp:commonAddCurrency' user_var glblslug %}" >New Currency </a>
-<a href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">Currencies</a>
-{%endblock%}
-
- {% block list-table-content-seciton %}
-    <tr data-id="{{item.id}}" class="allif-table-header-content-row">
-    <td class="allif-fix-table-col"><a class="allif-table-links" href="{% url 'allifmaalcommonapp:commonEditCurrency' item.id user_var glblslug %}"> {{item.name}}</a></td>
-    <td class="allif-table-content-td">{{item.description}} </td>
-    <td class="allif-table-content-td"> {{item.date|date:'d/m/Y'}} </td>
-    <td class="allif-table-content-td">{{item.status}}</td>
+  {% block advanced-search-action %}
+    {% url 'allifmaalcommonapp:commonCurrencyAdvanceSearch' user_var glblslug %}
   {% endblock %}
-
+  {% block allif-header-links %}
+  <a href="{% url 'allifmaalcommonapp:commonAddCurrency' user_var glblslug %}" >New Currency </a>
+  <a href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}">Currencies</a>
+  {% endblock %}
+  {% block list-table-content-seciton %}
+  {% url 'allifmaalcommonapp:commonEditCurrency' item.id user_var glblslug %}
+  {% endblock %}
   {% block list-table-content-seciton-dropdown-links %}
-  <a href="{% url 'allifmaalcommonapp:commonEditCurrency' item.id user_var glblslug %}" class="dropdown-item" id="allif-table-drop-item-link">Edit Item</a>
+  {% url 'allifmaalcommonapp:commonEditCurrency' item.id user_var glblslug %}
   {% endblock %}
-  {% block list-table-content-seciton-dropdown-delete-links %}
-  <a href="{% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}" id="allif-table-drop-item-link">No</a><span><strong> | </strong></span>
-  <a href="{% url 'allifmaalcommonapp:commonDeleteCurrency' item.id user_var glblslug %}" id="allif-confirm-delete">Confirm</a>
+  {% block list-table-content-seciton-dropdown-delete-decline %}
+  {% url 'allifmaalcommonapp:commonCurrencies' user_var glblslug %}
   {% endblock %}
-</div>
+  {% block list-table-content-seciton-dropdown-delete-confirm %}
+  {% url 'allifmaalcommonapp:commonDeleteCurrency' item.id user_var glblslug %}
+  {% endblock %}
