--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ui/general/delete-confirm.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ui/general/delete-confirm.html
@@ -7,16 +7,16 @@
 {%endblock%}
 {% block body %}
     {% include 'allifmaalcommonapp/includes/delete/delete-confirm-upper-section.html' %}
-    {% block delete-actions %}
+    
       <tr>
         <td class="allif-fix-table-col">Edit {{allifquery}}</td>
-        <td><a class="amel-table-list-identifier" href="">No, Dont Delete {{allifquery}}</a></td>
+        <td><a class="amel-table-list-identifier" href="{% block delete-action-decline %} {% endblock %}">No, Dont Delete {{allifquery}}</a></td>
       </tr>
      <tr>
         <td class="allif-fix-table-col">Delet {{allifquery}}</td>
-        <td><a class="amel-table-list-identifier body-delete-link" href=""> Yes, Delete {{allifquery}}</a></td>
+        <td><a class="amel-table-list-identifier body-delete-link" href="{% block delete-action-confirm %} {% endblock %}"> Yes, Delete {{allifquery}}</a></td>
       </tr>
-      {%endblock%}
+     
     {% include 'allifmaalcommonapp/includes/delete/delete-confirm-lower-section.html' %}
 {% block scripts %}
   {% endblock %}
