--- a/allifmaalcommonapp/templates/allifmaalcommonapp/ui/pdf/items-pdf.html
+++ b/allifmaalcommonapp/templates/allifmaalcommonapp/ui/pdf/items-pdf.html
@@ -14,7 +14,7 @@
 <div class="allif-pdf-table-content-body-section">
     <table class="allif-pdf-table-body">
     <tr>
-    <th colspan="3">Currency</th>
+    <th colspan="3">Name</th>
     <th colspan="3">Description</th>
     <th colspan="3">Comments</th>
     <th colspan="3">Date</th>
